# coophive-module-sdxl

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.rebrand  Makefile  README.md  docker-compose.yml  module.coophive  module.json  pyproject.toml
.github/workflows/: publish-gcr.yml
