[tool.poetry]
name = "sdxl"
version = "0.1.0"
description = "SDXL of Coophive (v0.9)"
authors = ["Nasfame <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
invisible_watermark = "0.2.0"
transformers = "4.30.2"
accelerate = "0.21.0"
safetensors = "0.3.1"
diffusers = "0.18.2"


python = "^3.10"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
